# daily-plan

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  README.md  implementation_plan.md  pyproject.toml  share-to-phone.ps1  task.md  termux-install.sh  termux-register-commands.sh  termux-start.sh  termux-update.sh  启动今日航线.cmd
app/: __init__.py  api.py  database.py  launcher.py  main.py  models.py  schemas.py
app/prompts/: daily_planner_v1.md  daily_planner_v1.txt
app/services/: ai_planner.py  task_rules.py  weekly_review_analyzer.py
app/static/: app.js  style.css
app/templates/: base.html  execute.html  gpt_workbench.html  index.html  review.html  settings.html  weekly.html
docs/: README.md  backend-api.md  backend-services.md  frontend.md  phone-transfer.md  product-usage-guide.md  termux-git-update.md  termux-quickstart.md
tests/: test_ai.py  test_api.py  test_launcher.py  test_persistence.py  test_rules.py  test_ui_and_settings.py
规划文档/: 00_总调度文档.md  01_学习规划_2026.6-2027.3.md  02_健身_康复速查版.md  03_手淫_睡眠速查版.md  04_习惯_心流_数学计算速查版.md
