[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-plan-webapp"
version = "0.1.0"
description = "本地优先的每日任务审阅与执行工具"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn>=0.34,<1",
  "jinja2>=3.1,<4",
  "httpx>=0.28,<1",
  "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = ["pytest>=8.3,<9"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore:Using `httpx` with `starlette.testclient` is deprecated"]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docs*", "tests*", "规划文档*"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/*.css", "static/*.js", "prompts/*.txt"]
